# hls-generator

./: CITATION.cff  CONTRIBUTING.md  DESIGN_GOALS.md  LICENSE  README-CN.md  README.md  RELEASE_RECEIPT.json  SECURITY.md  SKILL.md  pyproject.toml
agents/: openai.yaml
assets/examples/: hls_2d_block_transform_spec.json  hls_array_reshape_vector_scale_spec.json  hls_axis_increment_spec.json  (+17 more)
evals/: evals.json
integration/: __init__.py  default_workflow_config.json  hls_adapter.py
references/: configuration.md  hls-comment-style.md  hls-device-migration-strategy.md  hls-library-policy.md  hls-memory-burst-and-layout.md  hls-modeling-strategy.md  hls-optimization-patterns.md  hls-project-structure-patterns.md  hls-report-driven-optimization.md  hls-stencil-reduction-gemm-patterns.md  hls-task-parallel-strategy.md  hls-tutorial-derived-templates.md  integration.md  remote-board-platform-upload.md  vitis-hls-2024-2-script-guide.md  vitis-hls-official-patterns.md  workflow-contracts.md
runtime/: __init__.py
scripts/: _skill_tool_delegate.py  audit_skill.py  confidence_loop.py  evaluate_skill.py  inspect_project.py  manage_dirs.py  manage_docs.py  prepare_release.py  quick_validate.py  remote_vitis_acceptance.py  render_agents.py  verify_agents.py
smoke/: run_smoke.py
tests/: test_board_platform_payload.py  test_comment_coverage.py  test_comment_policy.py  test_confidence_loop.py  test_evaluate_skill.py  test_hls_pattern_contracts.py  test_prepare_release.py  test_remote_vitis_acceptance.py  test_runtime_config.py  test_skill_dependencies.py  test_user_config.py
(+52 files in other folders)
