[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hls-generator-skill"
version = "0.1.1"
description = "Agent-usable Codex skill for AMD/Xilinx Vitis HLS generation workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Jiyuan Liu", email = "erie@seu.edu.cn" }]
keywords = ["codex-skill", "agent-skill", "hls", "vitis-hls", "fpga", "hardware-generation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Homepage = "https://github.com/Eriemon/hls-generator"
Repository = "https://github.com/Eriemon/hls-generator"

[project.scripts]
hls-gen = "runtime.hls_generator.cli:main"

[tool.setuptools.packages.find]
include = ["runtime*", "integration*"]

[tool.setuptools.package-data]
"runtime.hls_generator" = ["runtime_config.json"]
"integration" = ["default_workflow_config.json"]
